# coco-gemini

./: README.md  coco_classes.json  coco_eval_script.py  gemini_model.py  pyproject.toml  run_matrix.py
